--- a/contents/projects/code/movie/client/app.wxss
+++ b/contents/projects/code/movie/client/app.wxss
@@ -280,15 +280,27 @@ page {
     box-shadow: 0 0 5rpx #eee;
 }
 
-.movie-common .pic {
-    width: 33%;
-    height: 40%;
+.movie-common .pic-wrap {
     transform: translate3d(-50%, -44rpx, 0);
     -webkit-transform: translate3d(-50%, -44rpx, 0);
 }
 
+.movie-common .pic-wrap .pic {
+    display: block;
+    margin: 0 auto;
+}
+
+.movie-common .title {
+    font-size: 36rpx;
+    text-align: center;
+    line-height: 120rpx;
+    color: #333;
+    padding: 0 80rpx;
+    font-weight: 600;
+}
+
 .movie-common .main-inner {
-    padding-top: 44%;
+    padding-top: 55%;
     color: #888;
     font-size: 28rpx;
     position: absolute;
@@ -340,16 +352,6 @@ page {
     display:inline-block;
     margin-top:10rpx;
     margin-left:-7%;
-}
-
-.movie-common .main-inner .title {
-    font-size: 36rpx;
-    text-align: center;
-    line-height: 60rpx;
-    color: #333;
-    padding: 0 80rpx;
-    font-weight: 600;
-    padding-bottom:20rpx;
 }
 
 .movie-item-card {
