--- a/contents/projects/code/movie/client/pages/movie/detail/detail.wxml
+++ b/contents/projects/code/movie/client/pages/movie/detail/detail.wxml
@@ -1,12 +1,14 @@
 <!--pages/movie/detail/detail.wxml-->
 
 <view class='movie-detail-page movie-common'>
-  <!-- 图片信息 -->
-  <image class='pic left h-middle' mode="scaleToFill" src="{{movieDetail.image}}" style="width:{{movieTopWidth + 'px'}};height:{{movieTopHeight + 'px'}}"></image>
+  <view class="pic-wrap h-middle">
+    <!-- 图片信息 -->
+    <image class='pic' mode="scaleToFill" src="{{movieDetail.image}}" style="width:{{movieTopWidth + 'px'}};height:{{movieTopHeight + 'px'}}"></image>
+    <!-- 主标题  -->
+    <view class='title ellipsis'>{{movieDetail.title}}</view>
+  </view>
   <view class='main'>
     <scroll-view class="main-inner" scroll-y scroll-with-animation enable-back-to-top>
-      <!-- 主标题  -->
-      <view class='title ellipsis'>{{movieDetail.title}}</view>
       <!-- 描述  -->
       <view class='dec'>
         {{movieDetail.description}}
