update: movie project comment edit page layout

--- a/contents/projects/code/movie/client/pages/comments/edit/edit.wxss
+++ b/contents/projects/code/movie/client/pages/comments/edit/edit.wxss
@@ -18,6 +18,7 @@
 
 .comments-input-box .text-zone {
   padding-top: 40rpx;
+  padding: 40rpx 80rpx;
 }
 
 .comments-input-box .text-zone textarea {
