--- a/contents/projects/code/movie/client/pages/comments/edit/edit.wxml
+++ b/contents/projects/code/movie/client/pages/comments/edit/edit.wxml
@@ -1,11 +1,14 @@
 <!--pages/comments/edit/edit.wxml-->
 <view class='comments-edit-page movie-common'>
   <!-- 图片信息 -->
-  <image class='pic left h-middle' mode="scaleToFill" src="{{editObj.image}}" style="width:{{movieTopWidth + 'px'}};height:{{movieTopHeight + 'px'}}"></image>
+  <view class="pic-wrap h-middle">
+    <image class='pic' mode="scaleToFill" src="{{editObj.image}}" style="width:{{movieTopWidth + 'px'}};height:{{movieTopHeight + 'px'}}"></image>
+    <!-- 主标题  -->
+    <view class='title ellipsis'>{{editObj.title}}</view>
+  </view>
+    
   <view class='main'>
     <scroll-view class="main-inner" scroll-y scroll-with-animation enable-back-to-top>
-      <!-- 主标题  -->
-      <view class='title ellipsis'>{{editObj.title}}</view>
       <!-- 语音和文字输入区域 -->
       <view class='comments-input-box'>
         <view class="box-main">
