update: movie project add or edit comment

--- a/contents/projects/code/movie/client/pages/comments/edit/edit.wxml
+++ b/contents/projects/code/movie/client/pages/comments/edit/edit.wxml
@@ -28,7 +28,7 @@
       </view>
     </scroll-view>
     <!-- 底部按钮 完成 -->
-    <view class='bottom-finish-btn' bindtap="submit">
+    <view class='bottom-finish-btn' bindtap="toPreview">
         完成
     </view>
   </view>
