--- a/contents/projects/code/movie/client/pages/movie/detail/detail.wxml
+++ b/contents/projects/code/movie/client/pages/movie/detail/detail.wxml
@@ -17,7 +17,7 @@
     <!-- 底部按钮 -->
     <view class='bottom-bar-wrap'>
       <view class='flex-box bottom-bar h-middle'>
-        <navigator class='flex' url="/pages/comments/list/list?id={{1}}">
+        <navigator class='flex' url="/pages/comments/list/list?id={{movieDetail.id}}">
           <view class='icon' style="background-image:{{'url(/images/see.png)'}}"></view>
           <view>查看影评</view>
         </navigator>
