--- a/contents/projects/code/movie/client/pages/my/my.wxml
+++ b/contents/projects/code/movie/client/pages/my/my.wxml
@@ -14,14 +14,14 @@
   <scroll-view wx:if="{{userInfo}}" class="my-main" scroll-y scroll-with-animation enable-back-to-top>
     <block wx:for="{{collectionList}}">
       <navigator class='movie-item-card collected-movie clearfix' url="/pages/movie/detail/detail?id={{1}}">
-        <image class='pic' mode="scaleToFill" src='http://img1.imgtn.bdimg.com/it/u=1134080428,55002573&fm=26&gp=0.jpg'></image>
+        <image class='pic' mode="scaleToFill" src="{{item.image}}"></image>
         <view class="left right-side">
-          <view class='title ellipsis'>付</view>
+          <view class='title ellipsis'>{{item.title}}</view>
           <view wx-if="{{false}}" class='voice ellipsis'></view>
-          <view wx-if="true" class='text '>dsfsdfsdfs</view>
+          <view wx-if="true" class='text '>{{item.content}}</view>
           <view class='box clearfix'>
-            <view class='head-pic left'></view>
-            <view class='people left'>{{111}}</view>
+            <view class='head-pic left' style="background-image:url({{item.avatar}})"></view>
+            <view class='people left'>{{item.name}}</view>
           </view>
         </view>
       </navigator>
