--- a/contents/projects/code/movie/client/pages/test/test.wxss
+++ b/contents/projects/code/movie/client/pages/test/test.wxss
@@ -6,8 +6,8 @@
     height: 60rpx;
     line-height: 60rpx;
     background: #d6dee5;
-    padding-left: 10%;
     border-radius: 3px;
+    position: relative;
 }
 
 .audio-box .audio-icon {
@@ -22,4 +22,20 @@
     display: inline-block;
     vertical-align: top;
     margin-top: 8rpx;
+}
+
+.audio-play {
+    width: 100%;
+    height: 100%;
+    background: pink;
+    padding-left: 10%;
+    box-sizing: border-box;
+}
+
+.audio-pause {
+    position: absolute;
+    top:0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
 }
