teset: movie project audio wrong way

--- a/contents/projects/code/movie/client/components/audio/audio.wxss
+++ b/contents/projects/code/movie/client/components/audio/audio.wxss
@@ -1,1 +1,27 @@
 /* 这里的样式只应用于这个自定义组件 */
+
+.audio-box {
+    min-width: 180rpx;
+    width: 70%;
+    height: 60rpx;
+    line-height: 60rpx;
+    background: #d6dee5;
+    border-radius: 3px;
+    position: relative;
+    padding-left: 10%;
+    box-sizing: border-box;
+}
+
+.audio-box .audio-icon {
+    width: 45rpx;
+    height: 45rpx;
+    border-radius: 50%;
+    background: no-repeat center;
+    background-size: 100% auto;
+    background-image:url('/images/play.png');
+    font-size:24rpx;
+    margin-right: 0;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 8rpx;
+}
