--- a/contents/projects/code/movie/client/components/audio/audio.wxml
+++ b/contents/projects/code/movie/client/components/audio/audio.wxml
@@ -1,5 +1,5 @@
 <!-- 这是自定义组件的内部WXML结构 -->
 <view class="audio-box" bindtap="play">
-  <view style="background-image:url({{isPlaying ? '../../images/pause.png' : '../../images/play.png'}})" class="audio-icon"></view>
+  <view style="background-image:url({{isPlaying ? '/images/pause.png' : '/images/play.png'}})" class="audio-icon"></view>
       {{time}}s
 </view>
